panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__struct__bitfield__test_error_typeof_bitfield.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/struct/bitfield/test_error_typeof_bitfield.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `typeof` cannot be applied to bitfields
   ╭─[panko/tests/cases/execute/struct/bitfield/test_error_typeof_bitfield.c:8:12]
   │
 8 │     typeof(value.x) x = value.x;
   │            ───┬───  
   │               ╰───── this expression designates a bitfield
───╯

Error: `typeof_unqual` cannot be applied to bitfields
   ╭─[panko/tests/cases/execute/struct/bitfield/test_error_typeof_bitfield.c:9:19]
   │
 9 │     typeof_unqual(value.x) y = value.x;
   │                   ───┬───  
   │                      ╰───── this expression designates a bitfield
───╯
